web pages cleaned

--- a/src/main/webapp/forum.html
+++ b/src/main/webapp/forum.html
@@ -12,18 +12,11 @@
 
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Amdesk | Topics - Design with pleasure</title>
 
-    <meta name="description" content="Amdesk - Help Center HTML template for your digital products">
-    <meta name="keywords" content="helpdesk, forum, template, HTML template, responsive, clean">
-    <meta name="author" content="nK">
+    <title>IIITB Query Forum</title>
 
-    <link rel="icon" type="image/png" href="assets/images/favicon.png">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- START: Styles -->
 
@@ -114,31 +107,23 @@
 
 
 
+
                 <li>
-                    <a data-fancybox data-touch="false" data-close-existing="true" data-src="#login"
-                       href="javascript:;">Log In</a>
-                </li>
-                <li>
-                    <span><a data-fancybox data-touch="false" data-close-existing="true" data-src="#signup"
-                             href="javascript:;" class="dx-btn dx-btn-md dx-btn-transparent">Sign Up</a></span>
-                </li>
-                <li>
-                    <span><a data-fancybox data-touch="false" data-close-existing="true" data-src="#signup"
-                             href="javascript:;" class="dx-btn dx-btn-md dx-btn-transparent">Sign Up</a></span>
+                    <span><a href="webapi/user/logout" class="dx-btn dx-btn-md dx-btn-transparent">Log Out</a></span>
                 </li>
 
             </ul>
         </div>
     </div>
 </nav>
-<!--<div class="dx-navbar dx-navbar-fullscreen">
+<div class="dx-navbar dx-navbar-fullscreen">
     <div class="container">
         <button class="dx-navbar-burger">
             <span></span><span></span><span></span>
         </button>
         <div class="dx-navbar-content">
 
-            <ul class="dx-nav dx-nav-align-left">
+            <!--<ul class="dx-nav dx-nav-align-left">
 
                 <li class="dx-drop-item">
                     <a href="store.html">
@@ -309,29 +294,25 @@
                         </li>
                     </ul>
                 </li>
-            </ul>
+            </ul>-->
 
             <ul class="dx-nav dx-nav-align-right">
 
-                <li>
+                <!--<li>
                     <a class="dx-nav-icon" href="checkout.html">
                         <span class="dx-nav-badge">2</span>
                         <span class="icon dx-icon-bag"></span>
                     </a>
-                </li>
+                </li>-->
+
                 <li>
-                    <a data-fancybox data-touch="false" data-close-existing="true" data-src="#login"
-                       href="javascript:;">Log In</a>
-                </li>
-                <li>
-                    <span><a data-fancybox data-touch="false" data-close-existing="true" data-src="#signup"
-                             href="javascript:;" class="dx-btn dx-btn-md dx-btn-transparent">Sign Up</a></span>
+                    <span><a href="webapi/user/logout" class="dx-btn dx-btn-md dx-btn-transparent">Log Out</a></span>
                 </li>
 
             </ul>
         </div>
     </div>
-</div>-->
+</div>
 <!-- END: Navbar -->
 
 
@@ -614,12 +595,12 @@
 
                     <div class="dx-widget-footer">
                         <div class="dx-widget-title">
-                            <a href="index.html" class="dx-widget-logo">
-                                <img src="assets/images/logo.svg" alt="" width="88px">
-                            </a>
+                            <h3>
+                                IIITB Query Forum
+                            </h3>
                         </div>
                         <div class="dx-widget-text">
-                            <p class="mb-0">&copy; 2019 <span class="dib">All rights reserved.</span> <span class="dib">Dexad &amp; nK.</span>
+                            <p class="mb-0">&copy; 2020 <span class="dib">DevOps Project.</span>
                             </p>
                         </div>
                         <div class="dx-widget-text">
@@ -633,7 +614,7 @@
                     </div>
 
                 </div>
-                <div class="col-sm-6 col-lg-3">
+                <!--<div class="col-sm-6 col-lg-3">
 
                     <div class="dx-widget-footer">
                         <div class="dx-widget-title">
@@ -673,29 +654,9 @@
                     </div>
 
                 </div>
-                <div class="col-sm-6 col-lg-3">
+                <div class="col-sm-6 col-lg-3">-->
 
-                    <div class="dx-widget-footer">
-                        <div class="dx-widget-title">
-                            Latest Posts
-                        </div>
-                        <a href="single-post.html" class="dx-widget-post">
-        
-        <span class="dx-widget-post-text">
-            <span class="dx-widget-post-title">The Big Thing in Design</span>
-            <span class="dx-widget-post-date">25 Sep 2018</span>
-        </span>
 
-                        </a>
-                        <a href="single-post.html" class="dx-widget-post">
-        
-        <span class="dx-widget-post-text">
-            <span class="dx-widget-post-title">Will Coding Ever Rule the World?</span>
-            <span class="dx-widget-post-date">24 Sep 2018</span>
-        </span>
-
-                        </a>
-                    </div>
 
                 </div>
             </div>
