--- a/src/main/webapp/sign_up.html
+++ b/src/main/webapp/sign_up.html
@@ -1,17 +1,8 @@
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>IIITB Query Forum</title>
 
-    <title>Amdesk | Account</title>
 
-    <meta name="description" content="Amdesk - Help Center HTML template for your digital products">
-    <meta name="keywords" content="helpdesk, forum, template, HTML template, responsive, clean">
-    <meta name="author" content="nK">
-
-    <link rel="icon" type="image/png" href="assets/images/favicon.png">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- START: Styles -->
 
@@ -59,6 +50,239 @@
 
 
 <body>
+<nav class="dx-navbar dx-navbar-top dx-navbar-collapse dx-navbar-sticky dx-navbar-expand-lg dx-navbar-dropdown-triangle dx-navbar-autohide">
+    <div class="container">
+
+        <a href="login.html" class="dx-nav-logo">
+            <!--<img src="assets/images/logo.svg" alt="" width="88px">-->
+            IIITB Query Forum
+        </a>
+
+
+        <button class="dx-navbar-burger">
+            <span></span><span></span><span></span>
+        </button>
+
+        <div class="dx-navbar-content">
+            <a href="login.html" class="dx-nav-logo">
+                <!--<img src="assets/images/logo.svg" alt="" width="88px">-->
+                Ask Question
+            </a>
+
+
+
+            <ul class="dx-nav dx-nav-align-right">
+
+
+
+
+                <li>
+                    <span><a href="login.html" class="dx-btn dx-btn-md dx-btn-transparent">Log In</a></span>
+                </li>
+
+            </ul>
+        </div>
+    </div>
+</nav>
+<div class="dx-navbar dx-navbar-fullscreen">
+    <div class="container">
+        <button class="dx-navbar-burger">
+            <span></span><span></span><span></span>
+        </button>
+        <div class="dx-navbar-content">
+
+            <!--<ul class="dx-nav dx-nav-align-left">
+
+                <li class="dx-drop-item">
+                    <a href="store.html">
+                        Store
+                    </a>
+                    <ul class="dx-navbar-dropdown">
+
+                        <li>
+                            <a href="store.html">
+                                Store
+                            </a>
+                        </li>
+                        <li>
+                            <a href="product.html">
+                                Product
+                            </a>
+                        </li>
+                        <li>
+                            <a href="checkout.html">
+                                Checkout
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="dx-drop-item">
+                    <a href="blog.html">
+                        Blog
+                    </a>
+                    <ul class="dx-navbar-dropdown">
+
+                        <li>
+                            <a href="blog.html">
+                                Blog
+                            </a>
+                        </li>
+                        <li>
+                            <a href="single-post.html">
+                                Single Post
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="dx-drop-item active">
+                    <a href="help-center.html">
+                        Help Center
+                    </a>
+                    <ul class="dx-navbar-dropdown">
+
+                        <li>
+                            <a href="help-center.html">
+                                Help Center
+                            </a>
+                        </li>
+                        <li class="dx-drop-item">
+                            <a href="documentations.html">
+                                Documentations
+                            </a>
+                            <ul class="dx-navbar-dropdown">
+
+                                <li>
+                                    <a href="documentations.html">
+                                        Documentations
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="single-documentation.html">
+                                        Single documentation
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="dx-drop-item">
+                            <a href="articles.html">
+                                Knowledge Base
+                            </a>
+                            <ul class="dx-navbar-dropdown">
+
+                                <li>
+                                    <a href="articles.html">
+                                        Knowledge Base
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="single-article-category.html">
+                                        Single Article Category
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="single-article.html">
+                                        Single Article
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="dx-drop-item active">
+                            <a href="forums.html">
+                                Forums
+                            </a>
+                            <ul class="dx-navbar-dropdown">
+
+                                <li>
+                                    <a href="forums.html">
+                                        Forums
+                                    </a>
+                                </li>
+                                <li class=" active">
+                                    <a href="topics.html">
+                                        Topics
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="single-topic.html">
+                                        Single Topic
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="dx-drop-item">
+                            <a href="ticket.html">
+                                Ticket System
+                            </a>
+                            <ul class="dx-navbar-dropdown">
+
+                                <li>
+                                    <a href="ticket.html">
+                                        Ticket System
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="ticket-submit.html">
+                                        Submit Ticket
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="ticket-submit-2.html">
+                                        Submit Ticket 2
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="single-ticket.html">
+                                        Single Ticket
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li class="dx-drop-item">
+                    <a href="account.html">
+                        Account
+                    </a>
+                    <ul class="dx-navbar-dropdown">
+
+                        <li>
+                            <a href="account.html">
+                                Account
+                            </a>
+                        </li>
+                        <li>
+                            <a href="account-licenses.html">
+                                Licenses
+                            </a>
+                        </li>
+                        <li>
+                            <a href="account-settings.html">
+                                Settings
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>-->
+
+            <ul class="dx-nav dx-nav-align-right">
+
+                <!--<li>
+                    <a class="dx-nav-icon" href="checkout.html">
+                        <span class="dx-nav-badge">2</span>
+                        <span class="icon dx-icon-bag"></span>
+                    </a>
+                </li>-->
+
+                <li>
+                    <span><a href="login.html" class="dx-btn dx-btn-md dx-btn-transparent">Log In</a></span>
+                </li>
+
+            </ul>
+        </div>
+    </div>
+</div>
+
+
     <div id="signup">
     <button type="button" data-fancybox-close class="fancybox-button fancybox-close-small" title="Close"><svg xmlns="http://www.w3.org/2000/svg" version="10" viewBox="0 0 24 24"><path d="M13 12l5-5-1-1-5 5-5-5-1 1 5 5-5 5 1 1 5-5 5 5 1-1z"></path></svg></button>
     <div class="dx-popup-content dx-signin text-center">
@@ -95,6 +319,85 @@
         </form>
     </div>
 </div>
+
+
+<footer class="dx-footer">
+    <div class="dx-box-1">
+        <div class="container">
+            <div class="row vertical-gap lg-gap">
+
+                <div class="col-sm-6 col-lg-3">
+
+                    <div class="dx-widget-footer">
+                        <div class="dx-widget-title">
+                            <h3>
+                                IIITB Query Forum
+                            </h3>
+                        </div>
+                        <div class="dx-widget-text">
+                            <p class="mb-0">&copy; 2020 <span class="dib">DevOps Project.</span>
+                            </p>
+                        </div>
+                        <div class="dx-widget-text">
+                            <ul class="dx-social-links mnt-3">
+                                <li><a href="#"><span class="fab fa-behance-square"></span></a></li>
+                                <li><a href="#"><span class="fab fa-instagram"></span></a></li>
+                                <li><a href="#"><span class="fab fa-dribbble"></span></a></li>
+                                <li><a href="#"><span class="fab fa-github"></span></a></li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+                <!--<div class="col-sm-6 col-lg-3">
+
+                    <div class="dx-widget-footer">
+                        <div class="dx-widget-title">
+                            Useful Links
+                        </div>
+                        <ul class="dx-widget-list">
+                            <li><a href="store.html">Store</a></li>
+                            <li><a href="checkout.html">Checkout</a></li>
+                            <li><a href="forums.html">Forums</a></li>
+                            <li><a href="blog.html">Blog</a></li>
+                        </ul>
+                        <ul class="dx-widget-list">
+                            <li><a href="help-center.html">Help Center</a></li>
+                            <li>
+                                <a data-fancybox data-touch="false" data-close-existing="true" data-src="#signup"
+                                   href="javascript:;">Sign Up</a>
+                            </li>
+                            <li>
+                                <a data-fancybox data-touch="false" data-close-existing="true" data-src="#login"
+                                   href="javascript:;">Log In</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+                <div class="col-sm-6 col-lg-3">
+
+                    <div class="dx-widget-footer">
+                        <div class="dx-widget-title">
+                            Latest Products
+                        </div>
+                        <div class="dx-widget-portfolio">
+                            <a href="product.html">Quantial – Moving Upon Signs Moveth Lesser</a>
+                            <a href="product.html">Sensific – Saying Beast Lesser for in Fruitful</a>
+                            <a href="product.html">Minist – Subdue Above for Signs Dry is Have Great</a>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-sm-6 col-lg-3">-->
+
+
+
+            </div>
+        </div>
+    </div>
+    </div>
+</footer>
 
 <script src="assets/vendor/object-fit-images/dist/ofi.min.js"></script>
 
