--- a/src/main/webapp/submit_ques.html
+++ b/src/main/webapp/submit_ques.html
@@ -12,19 +12,7 @@
 
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-    <title>Amdesk | Submit Ticket 2</title>
-
-    <meta name="description" content="Amdesk - Help Center HTML template for your digital products">
-    <meta name="keywords" content="helpdesk, forum, template, HTML template, responsive, clean">
-    <meta name="author" content="nK">
-
-    <link rel="icon" type="image/png" href="assets/images/favicon.png">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <title>IIITB Query Forum</title>
     <!-- START: Styles -->
 
     <!-- Google Fonts -->
@@ -89,8 +77,9 @@
 <nav class="dx-navbar dx-navbar-top dx-navbar-collapse dx-navbar-sticky dx-navbar-expand-lg dx-navbar-dropdown-triangle dx-navbar-autohide">
     <div class="container">
 
-        <a href="index.html" class="dx-nav-logo">
-            <img src="assets/images/logo.svg" alt="" width="88px">
+        <a href="forum.html" class="dx-nav-logo">
+            <!--<img src="assets/images/logo.svg" alt="" width="88px">-->
+            IIITB Query Forum
         </a>
 
 
@@ -99,238 +88,20 @@
         </button>
 
         <div class="dx-navbar-content">
+            <a href="submit_ques.html" class="dx-nav-logo">
+                <!--<img src="assets/images/logo.svg" alt="" width="88px">-->
+                Ask Question
+            </a>
 
-            <ul class="dx-nav dx-nav-align-left">
 
-                <li class="dx-drop-item">
-                    <a href="store.html">
-                        Store
-                    </a>
-                    <ul class="dx-navbar-dropdown">
-
-                        <li>
-                            <a href="store.html">
-                                Store
-                            </a>
-                        </li>
-                        <li>
-                            <a href="product.html">
-                                Product
-                            </a>
-                        </li>
-                        <li>
-                            <a href="checkout.html">
-                                Checkout
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="dx-drop-item">
-                    <a href="blog.html">
-                        Blog
-                    </a>
-                    <ul class="dx-navbar-dropdown">
-
-                        <li>
-                            <a href="blog.html">
-                                Blog
-                            </a>
-                        </li>
-                        <li>
-                            <a href="single-post.html">
-                                Single Post
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="dx-drop-item active">
-                    <a href="help-center.html">
-                        Help Center
-                    </a>
-                    <ul class="dx-navbar-dropdown">
-
-                        <li>
-                            <a href="help-center.html">
-                                Help Center
-                            </a>
-                        </li>
-                        <li class="dx-drop-item">
-                            <a href="documentations.html">
-                                Documentations
-                            </a>
-                            <ul class="dx-navbar-dropdown">
-
-                                <li>
-                                    <a href="documentations.html">
-                                        Documentations
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="single-documentation.html">
-                                        Single documentation
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="dx-drop-item">
-                            <a href="articles.html">
-                                Knowledge Base
-                            </a>
-                            <ul class="dx-navbar-dropdown">
-
-                                <li>
-                                    <a href="articles.html">
-                                        Knowledge Base
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="single-article-category.html">
-                                        Single Article Category
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="single-article.html">
-                                        Single Article
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="dx-drop-item">
-                            <a href="forums.html">
-                                Forums
-                            </a>
-                            <ul class="dx-navbar-dropdown">
-
-                                <li>
-                                    <a href="forums.html">
-                                        Forums
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="topics.html">
-                                        Topics
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="single-topic.html">
-                                        Single Topic
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="dx-drop-item active">
-                            <a href="ticket.html">
-                                Ticket System
-                            </a>
-                            <ul class="dx-navbar-dropdown">
-
-                                <li>
-                                    <a href="ticket.html">
-                                        Ticket System
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="ticket-submit.html">
-                                        Submit Ticket
-                                    </a>
-                                </li>
-                                <li class=" active">
-                                    <a href="ticket-submit-2.html">
-                                        Submit Ticket 2
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="single-ticket.html">
-                                        Single Ticket
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li class="dx-drop-item">
-                    <a href="account.html">
-                        Account
-                    </a>
-                    <ul class="dx-navbar-dropdown">
-
-                        <li>
-                            <a href="account.html">
-                                Account
-                            </a>
-                        </li>
-                        <li>
-                            <a href="account-licenses.html">
-                                Licenses
-                            </a>
-                        </li>
-                        <li>
-                            <a href="account-settings.html">
-                                Settings
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
 
             <ul class="dx-nav dx-nav-align-right">
-                <li>
-                    <div class="dropdown dx-dropdown dx-dropdown-checkout">
-                        <a class="dx-nav-icon" href="#" role="button" id="dropdownCheckout" data-toggle="dropdown"
-                           aria-haspopup="true" aria-expanded="false">
-                            <span class="dx-nav-badge">2</span>
-                            <span class="icon dx-icon-bag"></span>
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="dropdownCheckout">
-                            <table class="dx-table dx-table-checkout">
-                                <tbody>
-                                <tr>
-                                    <th scope="row" class="dx-table-checkout-img">
-                                        <a href="product.html"><img src="assets/images/product-1-sm.png" alt=""></a>
-                                    </th>
-                                    <td class="dx-table-checkout-title">
-                                        <a href="product.html">Sensific – Saying Beast Lesser for in Fruitful</a>
-                                    </td>
-                                    <td class="dx-table-checkout-price">
-                                        <div class="dx-table-checkout-price">$59</div>
-                                    </td>
-                                    <td class="dx-table-checkout-delete">
-                                        <a href="#"><span class="icon pe-7s-close"></span></a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <th scope="row" class="dx-table-checkout-img">
-                                        <a href="product.html"><img src="assets/images/product-2-sm.png" alt=""></a>
-                                    </th>
-                                    <td class="dx-table-checkout-title">
-                                        <a href="product.html">Minist – Subdue Above for Signs Dry is Have Great</a>
-                                    </td>
-                                    <td class="dx-table-checkout-price">
-                                        <div class="dx-table-checkout-price">$39</div>
-                                    </td>
-                                    <td class="dx-table-checkout-delete">
-                                        <a href="#"><span class="icon pe-7s-close"></span></a>
-                                    </td>
-                                </tr>
-                                </tbody>
-                            </table>
-                            <div class="d-flex justify-content-between dx-box-content pt-0 pb-0 mt-15 mnb-6">
-                                <span>Total Payment:</span><span><strong>$98</strong></span>
-                            </div>
-                            <div class="dx-box-content">
-                                <a href="checkout.html" class="dx-btn dx-btn-md dx-btn-block">Checkout</a>
-                            </div>
-                        </div>
-                    </div>
-                </li>
+
+
+
 
                 <li>
-                    <a data-fancybox data-touch="false" data-close-existing="true" data-src="#login"
-                       href="javascript:;">Log In</a>
-                </li>
-                <li>
-                    <span><a data-fancybox data-touch="false" data-close-existing="true" data-src="#signup"
-                             href="javascript:;" class="dx-btn dx-btn-md dx-btn-transparent">Sign Up</a></span>
+                    <span><a href="webapi/user/logout" class="dx-btn dx-btn-md dx-btn-transparent">Log Out</a></span>
                 </li>
 
             </ul>
@@ -344,7 +115,7 @@
         </button>
         <div class="dx-navbar-content">
 
-            <ul class="dx-nav dx-nav-align-left">
+            <!--<ul class="dx-nav dx-nav-align-left">
 
                 <li class="dx-drop-item">
                     <a href="store.html">
@@ -439,7 +210,7 @@
                                 </li>
                             </ul>
                         </li>
-                        <li class="dx-drop-item">
+                        <li class="dx-drop-item active">
                             <a href="forums.html">
                                 Forums
                             </a>
@@ -450,7 +221,7 @@
                                         Forums
                                     </a>
                                 </li>
-                                <li>
+                                <li class=" active">
                                     <a href="topics.html">
                                         Topics
                                     </a>
@@ -462,7 +233,7 @@
                                 </li>
                             </ul>
                         </li>
-                        <li class="dx-drop-item active">
+                        <li class="dx-drop-item">
                             <a href="ticket.html">
                                 Ticket System
                             </a>
@@ -478,7 +249,7 @@
                                         Submit Ticket
                                     </a>
                                 </li>
-                                <li class=" active">
+                                <li>
                                     <a href="ticket-submit-2.html">
                                         Submit Ticket 2
                                     </a>
@@ -515,23 +286,19 @@
                         </li>
                     </ul>
                 </li>
-            </ul>
+            </ul>-->
 
             <ul class="dx-nav dx-nav-align-right">
 
-                <li>
+                <!--<li>
                     <a class="dx-nav-icon" href="checkout.html">
                         <span class="dx-nav-badge">2</span>
                         <span class="icon dx-icon-bag"></span>
                     </a>
-                </li>
+                </li>-->
+
                 <li>
-                    <a data-fancybox data-touch="false" data-close-existing="true" data-src="#login"
-                       href="javascript:;">Log In</a>
-                </li>
-                <li>
-                    <span><a data-fancybox data-touch="false" data-close-existing="true" data-src="#signup"
-                             href="javascript:;" class="dx-btn dx-btn-md dx-btn-transparent">Sign Up</a></span>
+                    <span><a href="webapi/user/logout" class="dx-btn dx-btn-md dx-btn-transparent">Log Out</a></span>
                 </li>
 
             </ul>
@@ -645,13 +412,13 @@
 
                         <div class="dx-widget-footer">
                             <div class="dx-widget-title">
-                                <a href="index.html" class="dx-widget-logo">
-                                    <img src="assets/images/logo.svg" alt="" width="88px">
-                                </a>
+                                <h3>
+                                    IIITB Query Forum
+                                </h3>
                             </div>
                             <div class="dx-widget-text">
-                                <p class="mb-0">&copy; 2019 <span class="dib">All rights reserved.</span> <span
-                                        class="dib">Dexad &amp; nK.</span></p>
+                                <p class="mb-0">&copy; 2020 <span class="dib">DevOps Project.</span>
+                                </p>
                             </div>
                             <div class="dx-widget-text">
                                 <ul class="dx-social-links mnt-3">
@@ -664,7 +431,7 @@
                         </div>
 
                     </div>
-                    <div class="col-sm-6 col-lg-3">
+                    <!--<div class="col-sm-6 col-lg-3">
 
                         <div class="dx-widget-footer">
                             <div class="dx-widget-title">
@@ -704,35 +471,17 @@
                         </div>
 
                     </div>
-                    <div class="col-sm-6 col-lg-3">
+                    <div class="col-sm-6 col-lg-3">-->
 
-                        <div class="dx-widget-footer">
-                            <div class="dx-widget-title">
-                                Latest Posts
-                            </div>
-                            <a href="single-post.html" class="dx-widget-post">
-        
-        <span class="dx-widget-post-text">
-            <span class="dx-widget-post-title">The Big Thing in Design</span>
-            <span class="dx-widget-post-date">25 Sep 2018</span>
-        </span>
 
-                            </a>
-                            <a href="single-post.html" class="dx-widget-post">
-        
-        <span class="dx-widget-post-text">
-            <span class="dx-widget-post-title">Will Coding Ever Rule the World?</span>
-            <span class="dx-widget-post-date">24 Sep 2018</span>
-        </span>
 
-                            </a>
-                        </div>
-
-                    </div>
                 </div>
             </div>
         </div>
-    </footer>
+</div>
+</footer>
+
+
     <!-- END: Footer -->
 
 </div>
