Added Integration Tests

--- a/src/main/webapp/forum.html
+++ b/src/main/webapp/forum.html
@@ -109,7 +109,7 @@
 
 
                 <li>
-                    <span><a href="webapi/user/logout" class="dx-btn dx-btn-md dx-btn-transparent">Log Out</a></span>
+                    <span><a id="logoutlink" href="webapi/user/logout" class="dx-btn dx-btn-md dx-btn-transparent">Log Out</a></span>
                 </li>
 
             </ul>
