--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -311,13 +311,13 @@
                 <input id="password" name="password" type="password" class="form-control form-control-style-4" placeholder="Password">
             </div>
             <div class="dx-form-group-md">
-                <button type="submit" class="dx-btn dx-btn-block dx-btn-popup">Log In</button>
+                <button id="loginbtn" name="loginbtn" type="submit" class="dx-btn dx-btn-block dx-btn-popup">Log In</button>
             </div>
             <div class="dx-form-group-md">
                 <div class="dx-signin-or">OR</div>
             </div>
             <div class="dx-form-group-md">
-                <a href="sign_up.html" class="dx-btn dx-btn-block dx-btn-popup">Sign Up</a>
+                <a id="signuplink" name="signuplink" href="sign_up.html" class="dx-btn dx-btn-block dx-btn-popup">Sign Up</a>
             </div>
 
            <!-- <div class="dx-form-group-md">
