--- a/src/main/webapp/sign_up.html
+++ b/src/main/webapp/sign_up.html
@@ -314,7 +314,7 @@
                 <input id="cpassword" name="cpassword" type="password" class="form-control form-control-style-4" placeholder="Confirm password">
             </div>
             <div class="dx-form-group-md">
-                <button type="submit" class="dx-btn dx-btn-block dx-btn-popup">Sign Up</button>
+                <button id="createuser" name="createuser" type="submit" class="dx-btn dx-btn-block dx-btn-popup">Sign Up</button>
             </div>
         </form>
     </div>
